--- a/app/templates/service_admin/partials/virus_air_disinfection_request_condition_form.html
+++ b/app/templates/service_admin/partials/virus_air_disinfection_request_condition_form.html
@@ -14,7 +14,9 @@
                                     {% if _field.type != 'CSRFTokenField' %}
                                         <th style="border: none">
                                             {{ _field.label.text }}
-                                            <span class="has-text-danger">*</span>
+                                            {% if _field.type != 'IntegerField' %}
+                                                <span class="has-text-danger">*</span>
+                                            {% endif %}
                                         </th>
                                     {% endif %}
                                 {% endfor %}
@@ -75,14 +77,19 @@
 
             table.find('tbody tr').each(function () {
                 const checkbox = $(this).find('input[type="checkbox"]');
+                const numInputs = $(this).find('input[type="number"]');
                 const textInputs = $(this).find('input[type="text"]');
 
                 const active = checkbox.is(':checked');
+                numInputs.prop('readonly', !active);
                 textInputs.prop('readonly', !active).prop('required', active)
                     .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
                     .attr('oninput', "this.setCustomValidity('')");
 
-                if (!active) textInputs.val('');
+                if (!active) {
+                    numInputs.val('');
+                    textInputs.val('');
+                }
             });
         }
 
@@ -112,7 +119,7 @@
         if (cleanTypeField && cleanTypeField.includes('อื่นๆ โปรดระบุ')) {
             cleanTypeOtherField.show();
             cleanTypeOtherInput.prop('required', true).attr('oninvalid', "this.setCustomValidity('กรุณากรอกรูปแบบการทดสอบ')")
-                    .attr('oninput', "this.setCustomValidity('')");
+                .attr('oninput', "this.setCustomValidity('')");
         } else {
             cleanTypeOtherField.hide();
             cleanTypeOtherInput.val('');
