--- a/app/templates/academic_services/forms/virus_air_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_air_disinfection_request_form.html
@@ -171,7 +171,7 @@
                                                                                 {% if _field.type != 'CSRFTokenField' %}
                                                                                     <th style="border: none">
                                                                                         {{ _field.label.text }}
-                                                                                        {% if _field.type != 'IntegerField' %}
+                                                                                        {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
                                                                                             <span class="has-text-danger">*</span>
                                                                                         {% endif %}
                                                                                     </th>
