--- a/app/templates/academic_services/partials/virus_air_disinfection_request_condition_form.html
+++ b/app/templates/academic_services/partials/virus_air_disinfection_request_condition_form.html
@@ -81,15 +81,25 @@
                 const textInputs = $(this).find('input[type="text"]');
 
                 const active = checkbox.is(':checked');
-                numInputs.prop('readonly', !active);
-                textInputs.prop('readonly', !active).prop('required', active)
-                    .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
-                    .attr('oninput', "this.setCustomValidity('')");
+                textInputs.each(function () {
+                    const name = $(this).attr('name');
+                    const isOptional = name.endsWith('ratio') || name.endsWith('per_water');
+                    $(this).prop('readonly', !active);
 
-                if (!active) {
-                    numInputs.val('');
-                    textInputs.val('');
-                }
+                    if (active && !isOptional) {
+                        $(this)
+                            .prop('required', true)
+                            .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
+                            .attr('oninput', "this.setCustomValidity('')");
+                    } else {
+                        $(this).prop('required', false);
+                        this.setCustomValidity('');
+                    }
+
+                    if (!active) {
+                        $(this).val('');
+                    }
+                })
             });
         }
 
@@ -119,7 +129,7 @@
         if (cleanTypeField && cleanTypeField.includes('อื่นๆ โปรดระบุ')) {
             cleanTypeOtherField.show();
             cleanTypeOtherInput.prop('required', true).attr('oninvalid', "this.setCustomValidity('กรุณากรอกรูปแบบการทดสอบ')")
-                    .attr('oninput', "this.setCustomValidity('')");
+                .attr('oninput', "this.setCustomValidity('')");
         } else {
             cleanTypeOtherField.hide();
             cleanTypeOtherInput.val('');
