--- a/app/templates/service_admin/forms/virus_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_disinfection_request_form.html
@@ -449,19 +449,28 @@
 
                 table.find('tbody tr').each(function () {
                     const checkbox = $(this).find('input[type="checkbox"]');
-                    const numInputs = $(this).find('input[type="number"]');
                     const textInputs = $(this).find('input[type="text"]');
 
                     const active = checkbox.is(':checked');
-                    numInputs.prop('readonly', !active);
-                    textInputs.prop('readonly', !active).prop('required', active)
-                        .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
-                        .attr('oninput', "this.setCustomValidity('')");
+                    textInputs.each(function () {
+                        const name = $(this).attr('name');
+                        const isOptional = name.endsWith('ratio') || name.endsWith('per_water');
+                        $(this).prop('readonly', !active);
 
-                    if (!active) {
-                        numInputs.val('');
-                        textInputs.val('');
-                    }
+                        if (active && !isOptional) {
+                            $(this)
+                                .prop('required', true)
+                                .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
+                                .attr('oninput', "this.setCustomValidity('')");
+                        } else {
+                            $(this).prop('required', false);
+                            this.setCustomValidity('');
+                        }
+
+                        if (!active) {
+                            $(this).val('');
+                        }
+                    })
                 });
             }
 
