hx-target in button of bacteria_request_form template, virus_air_disinfection_request_form template and virus_disinfection_request_form template of academic_services and service_admin templates

--- a/app/templates/service_admin/forms/virus_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_disinfection_request_form.html
@@ -244,8 +244,8 @@
                                                             data-request-id="{{ request_id or '' }}"
                                                             hx-post="{{ url_for('service_admin.remove_condition_form', request_id=request_id) }}"
                                                             hx-vals='{"field": "{{ subform.name }}"}'
-                                                            hx-target=".subform-card"
-                                                            hx-swap="innerHTML"
+                                                            hx-target="closest .subform-card"
+                                                            hx-swap="outerHTML"
                                                     >
                                                         ลบ
                                                     </button>
