--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -245,8 +245,8 @@
                                                             data-request-id="{{ request_id or '' }}"
                                                             hx-post="{{ url_for('academic_services.remove_condition_form', request_id=request_id) }}"
                                                             hx-vals='{"field": "{{ subform.name }}"}'
-                                                            hx-target=".subform-card"
-                                                            hx-swap="innerHTML"
+                                                            hx-target="closest .subform-card"
+                                                            hx-swap="outerHTML"
                                                     >
                                                         ลบ
                                                     </button>
