--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -389,7 +389,7 @@
                     }
                 }
 
-                if (!hasOptions) {
+                if (hasOptions == false) {
                     const option = document.createElement('option');
                     option.value = subformId;
                     option.text = text;
