--- a/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
@@ -315,7 +315,7 @@
                     }
                 }
 
-                if (!hasOptions) {
+                if (hasOptions == false) {
                     const option = document.createElement('option');
                     option.value = subformId;
                     option.text = text;
