Edited validateProductType function in virus_air_disinfection_request_form template and virus_disinfection_request_form template of academic_services and service_admin templates

--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -360,6 +360,7 @@
                 };
             } else {
                 product_type.required = false;
+                product_type.setCustomValidity('');
                 product_type.oninvalid = null;
                 product_type.oninput = null;
             }
