--- a/app/templates/service_admin/forms/virus_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_disinfection_request_form.html
@@ -359,6 +359,7 @@
                 };
             } else {
                 product_type.required = false;
+                product_type.setCustomValidity('');
                 product_type.oninvalid = null;
                 product_type.oninput = null;
             }
