--- a/app/templates/academic_services/forms/virus_air_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_air_disinfection_request_form.html
@@ -205,7 +205,7 @@
                                                             {% endif %}
                                                         {% endif %}
                                                     {% endfor %}
-                                                    <button ind="{{ subform.name }}" type="button"
+                                                    <button id="{{ subform.name }}" type="button"
                                                             class="button is-danger is-rounded is-small remove-subform"
                                                             data-request-id="{{ request_id or '' }}"
                                                             hx-post="{{ url_for('academic_services.remove_condition_form', request_id=request_id) }}"
