--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -152,6 +152,58 @@
                                     <div id="product-storage-other-container" style='width:75%'></div>
                                 </div>
                             </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.manufacturer.label }}
+                                    <span class="has-text-danger">*</span>
+                                </label>
+                                <div class="control">
+                                    {{ form.manufacturer(class='input') }}
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.manufacturer_address.label }}
+                                    <span class="has-text-danger">*</span>
+                                </label>
+                                <div class="control">
+                                    {{ form.manufacturer_address(class='textarea') }}
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.importer.label }}
+                                </label>
+                                <div class="control">
+                                    {{ form.importer(class='input') }}
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.importer_address.label }}
+                                </label>
+                                <div class="control">
+                                    {{ form.importer_address(class='textarea') }}
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.distributor.label }}
+                                    <span class="has-text-danger">*</span>
+                                </label>
+                                <div class="control">
+                                    {{ form.distributor(class='input') }}
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.distributor_address.label }}
+                                    <span class="has-text-danger">*</span>
+                                </label>
+                                <div class="control">
+                                    {{ form.distributor_address(class='textarea') }}
+                                </div>
+                            </div>
                         </div>
                         <div class="box">
                             <h5 class="title is-size-5">รายการทดสอบ</h5>
