Added note form in virus_air_disinfection_request_form template and virus_disinfection_request_form template of academic_services and service_admin templates

--- a/app/templates/academic_services/forms/virus_disinfection_request_form.html
+++ b/app/templates/academic_services/forms/virus_disinfection_request_form.html
@@ -339,6 +339,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="box">
+                            <h5 class="title is-size-5">บันทึก/หมายเหตุ สำหรับผู้รับบริการ</h5>
+                            <hr style="background-color: gainsboro">
+                            <div class="field">
+                                <label class="label">{{ form.note.label }}</label>
+                                <div class="control">
+                                    {{ form.note(class='textarea') }}
+                                </div>
+                            </div>
+                        </div>
                         <div class="field is-grouped is-justify-content-center">
                             <div class="control">
                                 <input type="submit" value="บันทึกและดำเนินการต่อ" class="button is-success">
