Edited condition in virus_air_disinfection_request_form.html template, virus_disinfection_request_condition_form template and virus_disinfection_request_form template of academic_services and service_admin templates

--- a/app/templates/academic_services/partials/virus_disinfection_request_condition_form.html
+++ b/app/templates/academic_services/partials/virus_disinfection_request_condition_form.html
@@ -28,7 +28,15 @@
                                 <tr>
                                     {% for _field in subform %}
                                         {% if _field.type != 'CSRFTokenField' %}
-                                            <td style="border: none">{{ _field() }}</td>
+                                            <td style="border: none">
+                                                {% if _field.type == 'SelectField' %}
+                                                    <div class="select">
+                                                        {{ _field() }}
+                                                    </div>
+                                                {% else %}
+                                                    {{ _field() }}
+                                                {% endif %}
+                                            </td>
                                         {% endif %}
                                     {% endfor %}
                                     <td style="border: none">
